[package]
name = "brain-fuck-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
use_codegen = []

[dependencies]
libc="0.2"
proc-macro-bf = { path = "./proc-macro-bf" }
brain-fuck-parser = { path = "./brain-fuck-parser" }